Correction notification des cards menu sur page accueil fixer + changement de valeur du margin % en auto sur version tablette

--- a/site_production/assets/css/styles.css
+++ b/site_production/assets/css/styles.css
@@ -270,13 +270,14 @@ body {
     justify-content: center;
     z-index: 0;
     width: 40%;
+    position: relative;
   }
   .restaurants__cards__add a {
     text-decoration: none;
     color: black;
   }
   .restaurants__cards__add__notif {
-    position: relative;
+    position: absolute;
     z-index: 1;
     background-color: #99E2D0;
     border-radius: 5px;
@@ -286,8 +287,8 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-    left: 75%;
-    top: 45px;
+    right: 15px;
+    top: 15px;
   }
   .restaurants__cards__add img {
     object-fit: cover;
@@ -380,7 +381,7 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    margin: 230px 15% 0px 15%;
+    margin: 230px auto 0px auto;
     padding: 0px 128px;
   }
   .container .title {
@@ -623,13 +624,14 @@ body {
     justify-content: center;
     z-index: 0;
     width: 40%;
+    position: relative;
   }
   .restaurants__cards__add a {
     text-decoration: none;
     color: black;
   }
   .restaurants__cards__add__notif {
-    position: relative;
+    position: absolute;
     z-index: 1;
     background-color: #99E2D0;
     border-radius: 5px;
@@ -639,8 +641,8 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-    left: 75%;
-    top: 45px;
+    right: 15px;
+    top: 15px;
   }
   .restaurants__cards__add img {
     object-fit: cover;
@@ -964,13 +966,14 @@ body {
     justify-content: center;
     z-index: 0;
     width: 90%;
+    position: relative;
   }
   .restaurants__cards__add a {
     text-decoration: none;
     color: black;
   }
   .restaurants__cards__add__notif {
-    position: relative;
+    position: absolute;
     z-index: 1;
     background-color: #99E2D0;
     border-radius: 5px;
@@ -980,8 +983,8 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-    left: 75%;
-    top: 45px;
+    right: 15px;
+    top: 15px;
   }
   .restaurants__cards__add img {
     object-fit: cover;
