--- a/site_production/sass/body.scss
+++ b/site_production/sass/body.scss
@@ -117,12 +117,13 @@ body{
             justify-content: center;
             z-index: 0;
             width: 40%;
+            position: relative;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
             }
             &__notif{
-                position: relative;
+                position: absolute;
                 z-index: 1;
                 background-color: $cd-background--notif;
                 border-radius: 5px;
@@ -132,8 +133,8 @@ body{
                 justify-content: center;
                 align-items: center;
                 box-shadow: 0px 2px 4px 0px $cd-shadow;
-                left: 75%;
-                top: 45px;
+                right: 15px;
+                top: 15px;
             }
             & img{
                 object-fit: cover;
@@ -230,7 +231,7 @@ body{
         width: 50%;
         display: flex;
         flex-direction: column;
-        margin: 230px 15% 0px 15%;
+        margin: 230px auto 0px auto;
         padding: 0px 128px;
         .title{
             padding-top: 40px;
@@ -450,12 +451,13 @@ body{
             justify-content: center;
             z-index: 0;
             width: 40%;
+            position: relative;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
             }
             &__notif{
-                position: relative;
+                position: absolute;
                 z-index: 1;
                 background-color: $cd-background--notif;
                 border-radius: 5px;
@@ -465,8 +467,8 @@ body{
                 justify-content: center;
                 align-items: center;
                 box-shadow: 0px 2px 4px 0px $cd-shadow;
-                left: 75%;
-                top: 45px;
+                right: 15px;
+                top: 15px;
             }
             & img{
                 object-fit: cover;
@@ -774,12 +776,13 @@ body{
             justify-content: center;
             z-index: 0;
             width: 90%;
+            position:relative;
             & a{
                 text-decoration: none;
                 color: $cd-color--txt;
             }
             &__notif{
-                position: relative;
+                position: absolute;
                 z-index: 1;
                 background-color: $cd-background--notif;
                 border-radius: 5px;
@@ -789,8 +792,8 @@ body{
                 justify-content: center;
                 align-items: center;
                 box-shadow: 0px 2px 4px 0px $cd-shadow;
-                left: 75%;
-                top: 45px;
+                right: 15px;
+                top: 15px;
             }
             & img{
                 object-fit: cover;
